Adds Error Checking and Charting